samples/_failures_safe/1761272064_76da30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86ec064f.c: In function ‘main’:
./samples/SAFE/__tmp_86ec064f.c:135:5: error: expected declaration or statement at end of input
  135 |     if (result == NULL) {
      |     ^~
./samples/SAFE/__tmp_86ec064f.c:135:5: error: expected declaration or statement at end of input
